--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "gpx-proxy",
+  "name": "rando-proxy",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
