--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rando-proxy",
+  "name": "gpx-proxy",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
@@ -8,3 +8,4 @@
     "cheerio": "^1.0.0-rc.12"
   }
 }
+
